<resources>
    <string name="app_name">Cacttus Education 2020_2021</string>


    <string name="login">Login</string>


    <string name="register_here">Register Here</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello">Tungjatjeta</string>


</resources>